2006-02-07  Per Bothner  <per@bothner.com>

	* module1.scm: Update export list namespace:data -> plains date.
	* module3.scm (timestamp): Fix no-longer-supported syntax.

2006-01-24  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dean@octw.com>

	* SimpleB.java (i): New private field.
	(getI, setI): New public accessors.
	* classes2.scm (make-simpleC): New function to allocate <SimpleC>
	which needs to expand to a call of inherited setI.
	* obj-test.scm: Add call to make-simpleC.

2006-01-11  Per Bothner  <per@bothner.com>

	* gui-test.scm: Update for gui changes.

2005-12-10  Per Bothner  <per@bothner.com>

	* classes2.scm: Added 2 functions for capturing module-level non-static
	variable "through" a ClassExp.
	(obj-test): Call those new functions.

2005-12-05  Per Bothner  <per@bothner.com>
	    Dean Ferreyra <dean@octw.com>

	* classes2.scm: New test for Savannah bug #15151
	* obj-test.scm: Run the test.

2005-11-30  Per Bothner  <per@bothner.com>

	* scribble.scm: Test type inference/propagation by removing specifier.

2005-11-29  Per Bothner  <per@bothner.com>

	* mac-test.scm: Test new quasiquote extension.

2005-11-21  Per Bothner  <per@bothner.com>

	* classes2.scm (<TestCapture1>,  <TestCapture2>): New classes, to
	test capture of lambda in classes.
	* obj-test.scm: Do the test.

2005-11-18  Thomas Kirk <tk@research.att.com>
	    Per Bothner  <per@bothner.com>

	* mac-test.scm: Add test case from Savannah bug #14097
	(problem with (this) syntax within define-syntax).

2005-11-17  Per Bothner  <per@bothner.com>

	* classes1.scm <DateTest>: We must now use define-simple-class.

2005-10-24  Per Bothner  <per@bothner.com>

	* Makefile.am (check-num): Remove old dependency on testing.zip.

	* num-test.scm: Add tests using test-error and test-assert.

2005-10-06  Per Bothner  <per@bothner.com>

	* Makefile.am: Also search inherited $CLASSPATH - though last.

2005-10-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Add "." to CLASSPATH various places.
